--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=demo
+spring.security.user.name=admin
+spring.security.user.password=123456
 
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=smart_utilities_db;encrypt=true;trustServerCertificate=true
 spring.datasource.username=user_java
